updated Android SDK